Prevent the username from wrapping in header

--- a/app/webroot/css/theme.css
+++ b/app/webroot/css/theme.css
@@ -597,6 +597,7 @@ table.addfunds td {
     color: #ffffff;
     max-width: 150px;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
     display: inline-block;
 }
